changed the background picture

--- a/contact.html
+++ b/contact.html
@@ -53,24 +53,9 @@
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html"><span>Home</span></a></li>
-                <li class="has-children">
-                  <a href="services.html"><span>Services</span></a>
-                  <ul class="dropdown arrow-top">
-                    <li><a href="#">Physical Therapy</a></li>
-                    <li><a href="#">Massage Therapy</a></li>
-                    <li><a href="#">Chiropractic Therapy</a></li>
-                    <li class="has-children">
-                      <a href="#">Dropdown</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Physical Therapy</a></li>
-                        <li><a href="#">Massage Therapy</a></li>
-                        <li><a href="#">Chiropractic Therapy</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
+                <li ><a href="services.html"><span>Services</span></a></li>
                 <li><a href="about.html"><span>About</span></a></li>
-                <li><a href="blog.html"><span>Blog</span></a></li>
+                <!-- <li><a href="blog.html"><span>Blog</span></a></li> -->
                 <li class="active"><a href="contact.html"><span>Contact</span></a></li>
               </ul>
             </nav>
@@ -164,20 +149,21 @@
             
             <div class="p-4 mb-3 bg-white">
               <p class="mb-0 font-weight-bold">Address</p>
-              <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
+              <p class="mb-4">150 W 25th St. #492<br>
+              New York, NY 10001</p>
 
               <p class="mb-0 font-weight-bold">Phone</p>
-              <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
+              <p class="mb-4"><a href="#">+1 908 342 3269</a></p>
 
               <p class="mb-0 font-weight-bold">Email Address</p>
-              <p class="mb-0"><a href="#">youremail@domain.com</a></p>
+              <p class="mb-0"><a href="#">getonpt0111@gmail.com</a></p>
 
             </div>
             
             <div class="p-4 mb-3 bg-white">
               <h3 class="h5 text-black mb-3">More Info</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad iure porro mollitia architecto hic consequuntur. Distinctio nisi perferendis dolore, ipsa consectetur? Fugiat quaerat eos qui, libero neque sed nulla.</p>
-              <p><a href="#" class="btn btn-primary px-4 py-2 text-white btn-pill btn-sm">Learn More</a></p>
+              <p>At Get On Physical Therapy, every treatment is tailored for you. Our expert care is designed to help you achieve optimal health and wellness. Explore our unique approach by clicking "Learn More"</p>
+              <p><a href="about.html" class="btn btn-primary px-4 py-2 text-white btn-pill btn-sm">Learn More</a></p>
             </div>
 
           </div>
@@ -191,7 +177,7 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-7 mb-4 mb-lg-0">
             <h2 class="mb-3 mt-0 text-white">Upto 30% Discount for The First Commers</h2>
-            <p class="mb-0 text-white lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p class="mb-0 text-white lead">Beyond the hustle of daily life, away from the ordinary, a haven of tranquility awaits. Embark on a journey to wellness and save with our exclusive offer.</p>
           </div>
           <div class="col-lg-4">
             <p class="mb-0"><a href="contact.html" class="btn btn-outline-white text-white btn-md btn-pill px-5 font-weight-bold btn-block">Contact Us</a></p>
@@ -255,9 +241,7 @@
         <div class="row pt-5 mt-5">
           <div class="col-12 text-md-center text-left">
             <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Get On Physical Therapy. All rights reserved.
             </p>
           </div>
         </div>
