--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Physical Theraphy &mdash; Website Template by Colorlib</title>
+    <title>Get On Physical Therapy | Physical Therapists in NYC</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/style.css">
     
   </head>
+
   <body>
   
   <div class="site-wrap">
@@ -46,31 +47,16 @@
         <div class="row align-items-center">
           
           <div class="col-11 col-xl-4">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="text-white mb-0">PhysicalTherapy<span class="text-primary">.</span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="index.html" class="text-white mb-0">Get On PhysicalTherapy<span class="text-primary">.</span> </a></h1>
           </div>
           <div class="col-12 col-md-8 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li class="active"><a href="index.html"><span>Home</span></a></li>
-                <li class="has-children">
-                  <a href="services.html"><span>Services</span></a>
-                  <ul class="dropdown arrow-top">
-                    <li><a href="#">Physical Therapy</a></li>
-                    <li><a href="#">Massage Therapy</a></li>
-                    <li><a href="#">Chiropractic Therapy</a></li>
-                    <li class="has-children">
-                      <a href="#">Dropdown</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Physical Therapy</a></li>
-                        <li><a href="#">Massage Therapy</a></li>
-                        <li><a href="#">Chiropractic Therapy</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
+                <li ><a href="services.html"><span>Services</span></a></li>
                 <li><a href="about.html"><span>About</span></a></li>
-                <li><a href="blog.html"><span>Blog</span></a></li>
+                <!-- <li><a href="blog.html"><span>Blog</span></a></li> -->
                 <li><a href="contact.html"><span>Contact</span></a></li>
               </ul>
             </nav>
@@ -120,7 +106,7 @@
                 <span class="icon icon-home mr-3"></span>
                 <div class="text">
                   <strong class="d-block heading">Visit our Location</strong>
-                  <span class="excerpt">2875  Beechwood Drive</span>
+                  <span class="excerpt"><a href="https://www.google.com/maps/place/150+W+25th+St+%23492,+New+York,+NY+10001/@40.7448026,-73.9938845,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259a52519c883:0x8e50fc6090fffbc7!8m2!3d40.7448026!4d-73.9938845?entry=ttu">150 W 25th St #492</a></span>
                 </div>
               </div>
             </div>
@@ -129,7 +115,7 @@
                 <span class="icon icon-phone mr-3"></span>
                 <div class="text">
                   <strong class="d-block heading">Call us today</strong>
-                  <span class="excerpt"><a href="#">+(123) 456 7890</a></span>
+                  <span class="excerpt"><a href="#">+(908) 342 3269</a></span>
                 </div>
               </div>
             </div>
@@ -138,7 +124,7 @@
                 <span class="icon icon-envelope mr-3"></span>
                 <div class="text">
                   <strong class="d-block heading">Send us a message</strong>
-                  <span class="excerpt"><a href="#">info@mysite.com</a></span>
+                  <span class="excerpt"><a href="#">getonpt0111@gmail.com</a></span>
                 </div>
               </div>
             </div>
@@ -147,7 +133,7 @@
                 <span class="icon icon-clock-o mr-3"></span>
                 <div class="text">
                   <strong class="d-block heading">Opening hours</strong>
-                  <span class="excerpt">Mon-Fri 7:AM - 5PM</span>
+                  <span class="excerpt">Mon-Fri 9AM - 5PM</span>
                 </div>
               </div>
             </div>
@@ -161,14 +147,14 @@
         <div class="row">
           <div class="mb-4 mb-lg-0 col-sm-6 col-md-6 col-lg-3">
             <h3 class="mb-3">What We Offer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia rerum, aliquid velit minima inventore ad consequatur accusamus dolor.</p>
+            <p>Discover a world of health and wellness. Our expert team offers targeted treatments to enhance your wellbeing. Join us for a journey to better health.</p>
             <p><a href="#" class="d-inline-flex align-items-center block-service-1-more"><span>See all services</span> <span class="icon-keyboard_arrow_right icon"></span></a></p>
           </div>
           <div class="mb-4 mb-lg-0 col-sm-6 col-md-6 col-lg-3">
             <div class="block-service-1-card">
               <a href="#" class="thumbnail-link d-block mb-4"><img src="images/img_1.jpg" alt="Image" class="img-fluid"></a>
               <h3 class="block-service-1-heading mb-3"><a href="#">Physical Therapy</a></h3>
-              <div class="block-service-1-excerpt"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim odit molestias inventore, id sed, in harum tenetur earum.</p></div>
+              <div class="block-service-1-excerpt"><p>Recover mobility and strength with our personalized physical therapy. Tailored care to get you back to your best.</p></div>
               <p><a href="#" class="d-inline-flex align-items-center block-service-1-more"><span>Find out more</span> <span class="icon-keyboard_arrow_right icon"></span></a></p>
             </div>
           </div>
@@ -176,7 +162,7 @@
             <div class="block-service-1-card">
               <a href="#" class="thumbnail-link d-block mb-4"><img src="images/img_2.jpg" alt="Image" class="img-fluid"></a>
               <h3 class="block-service-1-heading mb-3"><a href="#">Chiropractic Therapy</a></h3>
-              <div class="block-service-1-excerpt"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim odit molestias inventore, id sed, in harum tenetur earum.</p></div>
+              <div class="block-service-1-excerpt"><p>Alleviate discomfort with precise chiropractic adjustments. We focus on your spinal health for better living.</p></div>
               <p><a href="#" class="d-inline-flex align-items-center block-service-1-more"><span>Find out more</span> <span class="icon-keyboard_arrow_right icon"></span></a></p>
             </div>
           </div>
@@ -184,7 +170,7 @@
             <div class="block-service-1-card">
               <a href="#" class="thumbnail-link d-block mb-4"><img src="images/img_3.jpg" alt="Image" class="img-fluid"></a>
               <h3 class="block-service-1-heading mb-3"><a href="#">Massage Therapy</a></h3>
-              <div class="block-service-1-excerpt"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim odit molestias inventore, id sed, in harum tenetur earum.</p></div>
+              <div class="block-service-1-excerpt"><p>Unwind with our therapeutic massages. Relax your body and mind in the hands of our professional therapists.</p></div>
               <p><a href="#" class="d-inline-flex align-items-center block-service-1-more"><span>Find out more</span> <span class="icon-keyboard_arrow_right icon"></span></a></p>
             </div>
           </div>
@@ -200,7 +186,7 @@
         <div class="block-half-content-text-inner">
           <h2 class="block-half-content-heading mb-4">Why Choose Us</h2>
           <div class="block-half-content-excerpt">
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut tenetur possimus nam totam, repellat expedita ullam amet velit.</p>
+          <p class="lead">Choose excellence and care—our dedicated team ensures your health and satisfaction with every visit. Your well-being is our top priority.</p>
           </div>
         </div>
 
@@ -217,8 +203,7 @@
             <div class="col-sm-4">
               <div class="counter">
                 <div class="number-wrap">
-                  <span class="block-counter-1-number" data-number="7">0</span><span class="append
-"></span>
+                  <span class="block-counter-1-number" data-number="7">0</span><span class="append"></span>
                 </div>
                 <span class="block-counter-1-caption">Years of Experience</span>
               </div>
@@ -250,7 +235,7 @@
             <div class="half bg-white d-block d-md-flex arrow-right">
               <div class="text">
                 <h2>Physical Therapy</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, unde!</p>
+                <p>Optimize health with precise therapy. Guided, effective care for peak performance.</p>
                 <p><a href="course-details.html" class="btn btn-primary btn-sm btn-pill">Learn More</a></p>
               </div>
             </div>
@@ -260,7 +245,7 @@
             <div class="half bg-white d-block d-md-flex arrow-right">
               <div class="text">
                 <h2>Massage Therapy</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, unde!</p>
+                <p>Unwind with expert massage therapy. Skilled, soothing hands for your relief.</p>
                 <p><a href="course-details.html" class="btn btn-primary btn-sm btn-pill">Learn More</a></p>
               </div>
             </div>
@@ -273,7 +258,7 @@
               <div class="half bg-white d-block d-md-flex arrow-left order-md-2">
                 <div class="text">
                   <h2>Chiropractic Therapy</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, unde!</p>
+                  <p>Realign with chiropractic care. Precise, gentle technique for your spine.</p>
                   <p><a href="course-details.html" class="btn btn-primary btn-sm btn-pill">Learn More</a></p>
                 </div>
               </div>
@@ -283,7 +268,7 @@
               <div class="half bg-white  d-block d-md-flex arrow-left order-md-2">
                 <div class="text">
                   <h2>Chiropractic Therapy</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, unde!</p>
+                  <p>Realign with chiropractic care. Precise, gentle technique for your spine</p>
                   <p><a href="course-details.html" class="btn btn-primary btn-sm btn-pill">Learn More</a></p>
                 </div>
               </div>
@@ -312,7 +297,7 @@
                 </div>
                 <div>
                   <h2 class="h5 mb-4">Katie Johnson</h2>
-                  <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
+                  <blockquote>&ldquo;Exceptional service! My recovery was swift and comfortable.&rdquo;</blockquote>
                 </div>
               </div>
 
@@ -322,7 +307,7 @@
                 </div>
                 <div>
                   <h2 class="h5 mb-4">Jun Mars</h2>
-                  <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
+                  <blockquote>&ldquo;Best massages ever. Complete stress relief after every session!&rdquo;</blockquote>
                 </div>
               </div>
 
@@ -332,7 +317,7 @@
                 </div>
                 <div>
                   <h2 class="h5 mb-4">Katie Johnson</h2>
-                  <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
+                  <blockquote>&ldquo;The personalized care here is unmatched. Each session is a step towards total wellness.&rdquo;</blockquote>
                 </div>
               </div>
 
@@ -342,7 +327,7 @@
                 </div>
                 <div>
                   <h2 class="h5 mb-4">Jun Mars</h2>
-                  <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias accusantium qui optio, possimus necessitatibus voluptate aliquam velit nostrum tempora ipsam!&rdquo;</blockquote>
+                  <blockquote>&ldquo;Short, sweet visits that pack a punch! My back has never been better. Def recommend it!!&rdquo;</blockquote>
                 </div>
               </div>
 
@@ -360,7 +345,7 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-7 mb-4 mb-lg-0">
             <h2 class="mb-3 mt-0 text-white">Upto 30% Discount for The First Commers</h2>
-            <p class="mb-0 text-white lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p class="mb-0 text-white lead">Beyond the hustle of daily life, away from the ordinary, a haven of tranquility awaits. Embark on a journey to wellness and save with our exclusive offer.</p>
           </div>
           <div class="col-lg-4">
             <p class="mb-0"><a href="contact.html" class="btn btn-outline-white text-white btn-md btn-pill px-5 font-weight-bold btn-block">Contact Us</a></p>
@@ -424,9 +409,7 @@
         <div class="row pt-5 mt-5">
           <div class="col-12 text-md-center text-left">
             <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Get On Physical Therapy. All rights reserved. 
             </p>
           </div>
         </div>
