--- a/services.html
+++ b/services.html
@@ -53,24 +53,9 @@
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html"><span>Home</span></a></li>
-                <li class="has-children active">
-                  <a href="services.html"><span>Services</span></a>
-                  <ul class="dropdown arrow-top">
-                    <li><a href="#">Physical Therapy</a></li>
-                    <li><a href="#">Massage Therapy</a></li>
-                    <li><a href="#">Chiropractic Therapy</a></li>
-                    <li class="has-children">
-                      <a href="#">Dropdown</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Physical Therapy</a></li>
-                        <li><a href="#">Massage Therapy</a></li>
-                        <li><a href="#">Chiropractic Therapy</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
+                <li class="active"><a href="services.html"><span>Services</span></a></li>
                 <li><a href="about.html"><span>About</span></a></li>
-                <li><a href="blog.html"><span>Blog</span></a></li>
+                <!-- <li><a href="blog.html"><span>Blog</span></a></li> -->
                 <li><a href="contact.html"><span>Contact</span></a></li>
               </ul>
             </nav>
@@ -302,7 +287,7 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-7 mb-4 mb-lg-0">
             <h2 class="mb-3 mt-0 text-white">Upto 30% Discount for The First Commers</h2>
-            <p class="mb-0 text-white lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p class="mb-0 text-white lead">Beyond the hustle of daily life, away from the ordinary, a haven of tranquility awaits. Embark on a journey to wellness and save with our exclusive offer.</p>
           </div>
           <div class="col-lg-4">
             <p class="mb-0"><a href="contact.html" class="btn btn-outline-white text-white btn-md btn-pill px-5 font-weight-bold btn-block">Contact Us</a></p>
@@ -321,17 +306,17 @@
                 <ul class="list-unstyled">
                   <li><a href="#">About Us</a></li>
                   <li><a href="#">Services</a></li>
-                  <li><a href="#">Testimonials</a></li>
+                  <li><a href="#">Blog</a></li>
                   <li><a href="#">Contact Us</a></li>
                 </ul>
               </div>
               <div class="col-md-6 mb-5 mb-lg-0 col-lg-3">
-                <h2 class="footer-heading mb-4">Products</h2>
+                <h2 class="footer-heading mb-4">Services</h2>
                 <ul class="list-unstyled">
-                  <li><a href="#">About Us</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="#">Manual Therapy</a></li>
+                  <li><a href="#">Sports Medicine</a></li>
+                  <li><a href="#">Exercise</a></li>
+                  <li><a href="#">Join Mobilization</a></li>
                 </ul>
               </div>
               <div class="col-md-6 mb-5 mb-lg-0 col-lg-3">
@@ -339,7 +324,7 @@
                 <ul class="list-unstyled">
                   <li><a href="#">About Us</a></li>
                   <li><a href="#">Services</a></li>
-                  <li><a href="#">Testimonials</a></li>
+                  <li><a href="#">Blog</a></li>
                   <li><a href="#">Contact Us</a></li>
                 </ul>
               </div>
@@ -366,9 +351,7 @@
         <div class="row pt-5 mt-5">
           <div class="col-12 text-md-center text-left">
             <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Get On Physical Therapy. All rights reserved.
             </p>
           </div>
         </div>
