--- a/about.html
+++ b/about.html
@@ -53,24 +53,9 @@
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html"><span>Home</span></a></li>
-                <li class="has-children">
-                  <a href="services.html"><span>Services</span></a>
-                  <ul class="dropdown arrow-top">
-                    <li><a href="#">Physical Therapy</a></li>
-                    <li><a href="#">Massage Therapy</a></li>
-                    <li><a href="#">Chiropractic Therapy</a></li>
-                    <li class="has-children">
-                      <a href="#">Dropdown</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Physical Therapy</a></li>
-                        <li><a href="#">Massage Therapy</a></li>
-                        <li><a href="#">Chiropractic Therapy</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
+                <li ><a href="services.html"><span>Services</span></a></li>
                 <li class="active"><a href="about.html"><span>About</span></a></li>
-                <li><a href="blog.html"><span>Blog</span></a></li>
+                <!-- <li><a href="blog.html"><span>Blog</span></a></li> -->
                 <li><a href="contact.html"><span>Contact</span></a></li>
               </ul>
             </nav>
@@ -122,16 +107,17 @@
           </div>
           <div class="col-md-5 ml-auto">
             <h2 class="text-primary mb-3">About Our History</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam voluptates a explicabo delectus sed labore dolor enim optio odio at!</p>
-            <p class="mb-4">Adipisci dolore reprehenderit est et assumenda veritatis, ex voluptate odio consequuntur quo ipsa accusamus dicta laborum exercitationem aspernatur reiciendis perspiciatis!</p>
+            <p class="lead">Newly opened, our clinic sets a new standard in physical therapy. Dedicated to your unique path to recovery, we offer personalized care tailored to your specific needs.</p>
+            <p class="mb-4">Our expert team employs the latest in therapeutic techniques within a nurturing environment to help you heal and regain strength. We’re committed to making a positive, enduring impact on your health and well-being.</p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam voluptates a explicabo delectus sed labore dolor enim optio odio at!</p>
-            <p class="mb-4">Adipisci dolore reprehenderit est et assumenda veritatis, ex voluptate odio consequuntur quo ipsa accusamus dicta laborum exercitationem aspernatur reiciendis perspiciatis!</p>
+            <p>Proud to serve our community, we provide innovative treatments that are effective and focused on your comfort and satisfaction. Trust us to prioritize your journey to wellness above all.</p>
+            <br>
+            <!-- <p class="mb-4">Our history is marked by a relentless pursuit of excellence and a deep-seated desire to improve lives. We stand by our mission to deliver exceptional care that makes a tangible difference to your wellbeing.</p> -->
 
             <ul class="ul-check list-unstyled success">
-              <li>Adipisci dolore reprehenderit</li>
-              <li>Accusamus dicta laborum</li>
-              <li>Delectus sed labore</li>
+              <li>Personalized Pathways to Wellness</li>
+              <li>Innovative Care, Lasting Results</li>
+              <li>Compassion in Every Interaction</li>
             </ul>
           </div>
         </div>
@@ -182,7 +168,7 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-7 mb-4 mb-lg-0">
             <h2 class="mb-3 mt-0 text-white">Upto 30% Discount for The First Commers</h2>
-            <p class="mb-0 text-white lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p class="mb-0 text-white lead">Beyond the hustle of daily life, away from the ordinary, a haven of tranquility awaits. Embark on a journey to wellness and save with our exclusive offer.</p>
           </div>
           <div class="col-lg-4">
             <p class="mb-0"><a href="contact.html" class="btn btn-outline-white text-white btn-md btn-pill px-5 font-weight-bold btn-block">Contact Us</a></p>
@@ -246,9 +232,7 @@
         <div class="row pt-5 mt-5">
           <div class="col-12 text-md-center text-left">
             <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Get On Physical Therapy. All rights reserved.
             </p>
           </div>
         </div>
