--- a/blog-single.html
+++ b/blog-single.html
@@ -53,22 +53,7 @@
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html"><span>Home</span></a></li>
-                <li class="has-children">
-                  <a href="services.html"><span>Services</span></a>
-                  <ul class="dropdown arrow-top">
-                    <li><a href="#">Physical Therapy</a></li>
-                    <li><a href="#">Massage Therapy</a></li>
-                    <li><a href="#">Chiropractic Therapy</a></li>
-                    <li class="has-children">
-                      <a href="#">Dropdown</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Physical Therapy</a></li>
-                        <li><a href="#">Massage Therapy</a></li>
-                        <li><a href="#">Chiropractic Therapy</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
+                <li ><a href="services.html"><span>Services</span></a></li>
                 <li><a href="about.html"><span>About</span></a></li>
                 <li class="active"><a href="blog.html"><span>Blog</span></a></li>
                 <li><a href="contact.html"><span>Contact</span></a></li>
