--- a/blog.html
+++ b/blog.html
@@ -53,22 +53,7 @@
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html"><span>Home</span></a></li>
-                <li class="has-children">
-                  <a href="services.html"><span>Services</span></a>
-                  <ul class="dropdown arrow-top">
-                    <li><a href="#">Physical Therapy</a></li>
-                    <li><a href="#">Massage Therapy</a></li>
-                    <li><a href="#">Chiropractic Therapy</a></li>
-                    <li class="has-children">
-                      <a href="#">Dropdown</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Physical Therapy</a></li>
-                        <li><a href="#">Massage Therapy</a></li>
-                        <li><a href="#">Chiropractic Therapy</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
+                <li ><a href="services.html"><span>Services</span></a></li>
                 <li><a href="about.html"><span>About</span></a></li>
                 <li class="active"><a href="blog.html"><span>Blog</span></a></li>
                 <li><a href="contact.html"><span>Contact</span></a></li>
@@ -295,9 +280,7 @@
         <div class="row pt-5 mt-5">
           <div class="col-12 text-md-center text-left">
             <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Get On Physical Therapy. All rights reserved.
             </p>
           </div>
         </div>
