changed the time

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <span class="icon icon-clock-o mr-3"></span>
                 <div class="text">
                   <strong class="d-block heading">Opening hours</strong>
-                  <span class="excerpt">Mon-Fri 9AM - 5PM</span>
+                  <span class="excerpt">Fri & Sat 8:30AM - 4:30PM</span>
                 </div>
               </div>
             </div>
