--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="index.html"><span>Home</span></a></li>
-                <li ><a href="services.html"><span>Services</span></a></li>
+                <!-- <li ><a href="services.html"><span>Services</span></a></li> -->
                 <li class="active"><a href="about.html"><span>About</span></a></li>
                 <!-- <li><a href="blog.html"><span>Blog</span></a></li> -->
                 <li><a href="contact.html"><span>Contact</span></a></li>
@@ -126,7 +126,7 @@
     
 
 
-    <div class="site-section">
+    <!-- <div class="site-section">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center">
@@ -161,13 +161,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="mt-5 block-cta-1 primary-overlay" style="background-image: url('images/hero_bg_2.jpg')">
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-7 mb-4 mb-lg-0">
-            <h2 class="mb-3 mt-0 text-white">Upto 30% Discount for The First Commers</h2>
+            <h2 class="mb-3 mt-0 text-white">Visit Us Today!</h2>
             <p class="mb-0 text-white lead">Beyond the hustle of daily life, away from the ordinary, a haven of tranquility awaits. Embark on a journey to wellness and save with our exclusive offer.</p>
           </div>
           <div class="col-lg-4">
