--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
               <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li class="active"><a href="index.html"><span>Home</span></a></li>
-                <li ><a href="services.html"><span>Services</span></a></li>
+                <!-- <li ><a href="services.html"><span>Services</span></a></li> -->
                 <li><a href="about.html"><span>About</span></a></li>
                 <!-- <li><a href="blog.html"><span>Blog</span></a></li> -->
                 <li><a href="contact.html"><span>Contact</span></a></li>
@@ -106,7 +106,7 @@
                 <span class="icon icon-home mr-3"></span>
                 <div class="text">
                   <strong class="d-block heading">Visit our Location</strong>
-                  <span class="excerpt"><a href="https://www.google.com/maps/place/150+W+25th+St+%23492,+New+York,+NY+10001/@40.7448026,-73.9938845,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259a52519c883:0x8e50fc6090fffbc7!8m2!3d40.7448026!4d-73.9938845?entry=ttu">150 W 25th St #492</a></span>
+                  <span class="excerpt"><a href="https://www.google.com/maps/place/150+W+25th+St+%23402,+New+York,+NY+10001/@40.7438417,-73.9968899,19.38z/data=!4m6!3m5!1s0x89c259a52507aa5d:0x385f82641a7c701e!8m2!3d40.744761!4d-73.993873!16s%2Fg%2F11ll6ss4y9?entry=ttu">150 W 25th St #402</a></span>
                 </div>
               </div>
             </div>
@@ -169,7 +169,7 @@
           <div class="mb-4 mb-lg-0 col-sm-6 col-md-6 col-lg-3">
             <div class="block-service-1-card">
               <a href="#" class="thumbnail-link d-block mb-4"><img src="images/img_3.jpg" alt="Image" class="img-fluid"></a>
-              <h3 class="block-service-1-heading mb-3"><a href="#">Massage Therapy</a></h3>
+              <h3 class="block-service-1-heading mb-3"><a href="#">Geriatric Therapy</a></h3>
               <div class="block-service-1-excerpt"><p>Unwind with our therapeutic massages. Relax your body and mind in the hands of our professional therapists.</p></div>
               <p><a href="#" class="d-inline-flex align-items-center block-service-1-more"><span>Find out more</span> <span class="icon-keyboard_arrow_right icon"></span></a></p>
             </div>
@@ -195,15 +195,15 @@
             <div class="col-sm-4">
               <div class="counter">
                 <div class="number-wrap">
-                  <span class="block-counter-1-number" data-number="3">0</span><span class="append">K</span>
+                  <span class="append">></span><span class="block-counter-1-number" data-number="10">0</span>
                 </div>
-                <span class="block-counter-1-caption">Happy Customers</span>
+                <span class="block-counter-1-caption">Avg. Wait Time (mins)</span>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="counter">
                 <div class="number-wrap">
-                  <span class="block-counter-1-number" data-number="7">0</span><span class="append"></span>
+                  <span class="block-counter-1-number" data-number="6">0</span><span class="append"></span>
                 </div>
                 <span class="block-counter-1-caption">Years of Experience</span>
               </div>
@@ -344,7 +344,8 @@
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-7 mb-4 mb-lg-0">
-            <h2 class="mb-3 mt-0 text-white">Upto 30% Discount for The First Commers</h2>
+            <!-- <h2 class="mb-3 mt-0 text-white">Upto 30% Discount for The First Commers</h2> -->
+            <h2 class="mb-3 mt-0 text-white">Visit Us Today!</h2>
             <p class="mb-0 text-white lead">Beyond the hustle of daily life, away from the ordinary, a haven of tranquility awaits. Embark on a journey to wellness and save with our exclusive offer.</p>
           </div>
           <div class="col-lg-4">
