revert index.html

--- a/index.html
+++ b/index.html
@@ -106,15 +106,7 @@
                 <span class="icon icon-home mr-3"></span>
                 <div class="text">
                   <strong class="d-block heading">Visit our Location</strong>
-                  <!-- <span class="excerpt">
-                    <a href="https://www.google.com/maps/place/150+W+25th+St+%23402,+New+York,+NY+10001/@40.7438417,-73.9968899,19.38z/data=!4m6!3m5!1s0x89c259a52507aa5d:0x385f82641a7c701e!8m2!3d40.744761!4d-73.993873!16s%2Fg%2F11ll6ss4y9?entry=ttu">
-                        150 W 25th St #402
-                    <br>
-                    New York, NY
-                    </a>
-                </span> -->
-                
-                <span class="excerpt"><a href="https://www.google.com/maps/place/150+W+25th+St+%23402,+New+York,+NY+10001/@40.7438417,-73.9968899,19.38z/data=!4m6!3m5!1s0x89c259a52507aa5d:0x385f82641a7c701e!8m2!3d40.744761!4d-73.993873!16s%2Fg%2F11ll6ss4y9?entry=ttu">150 W 25th St #402</a></span>
+                  <span class="excerpt"><a href="https://www.google.com/maps/place/150+W+25th+St+%23402,+New+York,+NY+10001/@40.7438417,-73.9968899,19.38z/data=!4m6!3m5!1s0x89c259a52507aa5d:0x385f82641a7c701e!8m2!3d40.744761!4d-73.993873!16s%2Fg%2F11ll6ss4y9?entry=ttu">150 W 25th St #402</a></span>
                 </div>
               </div>
             </div>
@@ -123,7 +115,7 @@
                 <span class="icon icon-phone mr-3"></span>
                 <div class="text">
                   <strong class="d-block heading">Call us today</strong>
-                  <span class="excerpt"><a href="tel:9083423269">908.342.3269</a></span>
+                  <span class="excerpt"><a href="#">+(908) 342 3269</a></span>
                 </div>
               </div>
             </div>
@@ -178,7 +170,7 @@
             <div class="block-service-1-card">
               <a href="#" class="thumbnail-link d-block mb-4"><img src="images/img_3.jpg" alt="Image" class="img-fluid"></a>
               <h3 class="block-service-1-heading mb-3"><a href="#">Geriatric Therapy</a></h3>
-              <div class="block-service-1-excerpt"><p>Nurture elderly well-being with our specialized geriatric care. Expert, gentle, and effective treatment.</p></div>
+              <div class="block-service-1-excerpt"><p>Unwind with our therapeutic massages. Relax your body and mind in the hands of our professional therapists.</p></div>
               <p><a href="#" class="d-inline-flex align-items-center block-service-1-more"><span>Find out more</span> <span class="icon-keyboard_arrow_right icon"></span></a></p>
             </div>
           </div>
@@ -203,7 +195,7 @@
             <div class="col-sm-4">
               <div class="counter">
                 <div class="number-wrap">
-                  <span class="append">&lt;</span><span class="block-counter-1-number" data-number="10">0</span>
+                  <span class="append">></span><span class="block-counter-1-number" data-number="10">0</span>
                 </div>
                 <span class="block-counter-1-caption">Avg. Wait Time (mins)</span>
               </div>
@@ -265,7 +257,7 @@
             <div class="half-wrap d-block d-md-flex">
               <div class="half bg-white d-block d-md-flex arrow-left order-md-2">
                 <div class="text">
-                  <h2>Geriatric Therapy</h2>
+                  <h2>Chiropractic Therapy</h2>
                   <p>Realign with chiropractic care. Precise, gentle technique for your spine.</p>
                   <p><a href="course-details.html" class="btn btn-primary btn-sm btn-pill">Learn More</a></p>
                 </div>
@@ -275,7 +267,7 @@
             <div class="half-wrap d-block d-md-flex">
               <div class="half bg-white  d-block d-md-flex arrow-left order-md-2">
                 <div class="text">
-                  <h2>Balance Therapy</h2>
+                  <h2>Chiropractic Therapy</h2>
                   <p>Realign with chiropractic care. Precise, gentle technique for your spine</p>
                   <p><a href="course-details.html" class="btn btn-primary btn-sm btn-pill">Learn More</a></p>
                 </div>
