--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Physical Theraphy &mdash; Website Template by Colorlib</title>
+    <title>Get On Physical Theraphy</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -46,7 +46,7 @@
         <div class="row align-items-center">
           
           <div class="col-11 col-xl-4">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="text-white mb-0">PhysicalTherapy<span class="text-primary">.</span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="index.html" class="text-white mb-0">Get On PhysicalTherapy<span class="text-primary">.</span> </a></h1>
           </div>
           <div class="col-12 col-md-8 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
