--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="mb-4 mb-lg-0 col-sm-6 col-md-6 col-lg-3">
             <div class="block-service-1-card">
               <a href="#" class="thumbnail-link d-block mb-4"><img src="images/img_2.jpg" alt="Image" class="img-fluid"></a>
-              <h3 class="block-service-1-heading mb-3"><a href="#">Chiropractic Therapy</a></h3>
+              <h3 class="block-service-1-heading mb-3"><a href="#">Massage Therapy</a></h3>
               <div class="block-service-1-excerpt"><p>Alleviate discomfort with precise chiropractic adjustments. We focus on your spinal health for better living.</p></div>
               <p><a href="#" class="d-inline-flex align-items-center block-service-1-more"><span>Find out more</span> <span class="icon-keyboard_arrow_right icon"></span></a></p>
             </div>
