--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </a>
                 </span> -->
                 
-                <span class="excerpt"><a href="https://www.google.com/maps/place/150+W+25th+St+%23402,+New+York,+NY+10001/@40.7438417,-73.9968899,19.38z/data=!4m6!3m5!1s0x89c259a52507aa5d:0x385f82641a7c701e!8m2!3d40.744761!4d-73.993873!16s%2Fg%2F11ll6ss4y9?entry=ttu">150 W 25th St #402</a></span>
+                <span class="excerpt"><a href="https://www.google.com/maps/place/122+W+26th+St+ste+500,+New+York,+NY+10001/@40.7450796,-73.9951805,593m/data=!3m3!1e3!4b1!5s0x89c259a524c64a01:0xac44796e7c02886a!4m6!3m5!1s0x89c259a51210417b:0x566a0d308ff5b110!8m2!3d40.7450796!4d-73.9926056!16s%2Fg%2F11y6pwxmq7?entry=ttu">122W 26th St #500</a></span>
                 </div>
               </div>
             </div>
@@ -141,7 +141,7 @@
                 <span class="icon icon-clock-o mr-3"></span>
                 <div class="text">
                   <strong class="d-block heading">Opening hours</strong>
-                  <span class="excerpt">Fri & Sat 8:30AM - 4:30PM</span>
+                  <span class="excerpt">Mon - Sun 8:30AM - 4:30PM</span>
                 </div>
               </div>
             </div>
